cmake_minimum_required(VERSION 3.15)
project(learning)

set(CMAKE_CXX_STANDARD 14)


add_executable(learning main.cpp)
add_executable(day01 day01/day01.cpp)
add_executable(printDemo day01/printDemo.cpp)
add_executable(sum1-100 day02/sum1-100.cpp)
add_executable(functionDemo day02/functionDemo.cpp)
add_executable(practice day03/practice.cpp)
add_executable(smile day03/smile.cpp)
add_executable(smileLoop day03/smileLoop.cpp)
add_executable(sum1-100for day03/sum1-100for.cpp)
add_executable(type day03/type.cpp)
add_executable(test1 day04/test1.cpp)
add_executable(test2 day04/test2.cpp)
add_executable(caltag day04/caltag.cpp)
add_executable(test3 day04/test3.cpp)
add_executable(day04Homework day04/homework.cpp)
add_executable(daoxu day05/daoxu.cpp)
add_executable(1000 day06/1000.cpp)
add_executable(1001 day06/1001.cpp)
add_executable(1002 day06/1002.cpp)
add_executable(1003 day06/1003.cpp)
add_executable(1004 day06/1004.cpp)
add_executable(1005 day06/1005.cpp)
add_executable(1007 day07/1007.cpp)
add_executable(1032 day07/1032.cpp)
add_executable(1041 day07/1041.cpp)
add_executable(ArrayLearning day07/ArrayLeraning.cpp)
add_executable(1153 day07/1153.cpp)
add_executable(ForLearning day07/ForLearning.cpp)
add_executable(character day08/character.cpp)
add_executable(CharacterFunction day08/CharacterFunction.cpp)
add_executable(1051 day09/1051.cpp)
add_executable(1052 day09/1052.cpp)
add_executable(1057 day09/1057.cpp)
add_executable(1126 day10/1126.cpp)
add_executable(math day10/math.cpp)
add_executable(1138 day10/1138.cpp)
add_executable(1091 day10/1091.cpp)
add_executable(1405 day11/1405.cpp)
add_executable(1318 day11/1318.cpp)
add_executable(1045 day12/1045.cpp)
add_executable(1070 day12/1070.cpp)
add_executable(1074 day12/1074.cpp)
add_executable(1093 day12/1093.cpp)
add_executable(1125 day12/1125.cpp)
add_executable(1200 day13/1200.cpp)
add_executable(1214 day13/1214.cpp)
add_executable(1207 day13/1207.cpp)
add_executable(1233 day13/1233.cpp)
add_executable(1260 day13/1260.cpp)
add_executable(1284 day13/1284.cpp)
add_executable(cc520 day13/cc520.cpp)
add_executable(1080 day14/1080.cpp)
add_executable(1250 day14/1250.cpp)
add_executable(1315 day14/1315.cpp)
add_executable(1330 day14/1330.cpp)
add_executable(1368 day14/1368.cpp)
add_executable(1122 day15/1122.cpp)
add_executable(1122-2 day15/1122-2.cpp)
add_executable(1122-3 day15/1122-3.cpp)
add_executable(1446 day15/1446.cpp)



































